Gerando o artefato do build

--- a/Java Maven/maven-project/pom.xml
+++ b/Java Maven/maven-project/pom.xml
@@ -26,6 +26,7 @@
   </repositories>
   
   <build>
+  		<finalName>loja</finalName>
   		<plugins>
   			<plugin>
   				<artifactId>maven-compiler-plugin</artifactId>
