--- a/Segurança na API Rest/pom.xml
+++ b/Segurança na API Rest/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-starter-admin-client</artifactId>
+			<version>2.1.4</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
